--- a/package.json
+++ b/package.json
@@ -4,30 +4,25 @@
   "description": "WDIO Atomation saucedemo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx wdio",
+    "wdio": "wdio run ./wdio.conf.js"
   },
   "author": "Diego Alejandro Cortes Roa",
   "license": "ISC",
-  "dependencies": {
-    "@wdio/cli": "^7.16.16",
-    "allure-commandline": "^2.17.2",
-    "casual": "^1.6.2",
-    "kill-port": "^1.6.1"
-  },
   "devDependencies": {
-    "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/register": "^7.17.0",
-    "@wdio/allure-reporter": "^7.16.14",
-    "@wdio/local-runner": "^7.16.16",
-    "@wdio/mocha-framework": "^7.16.15",
-    "@wdio/selenium-standalone-service": "^7.16.16",
-    "@wdio/spec-reporter": "^7.16.14",
-    "chromedriver": "^99.0.0",
-    "eslint": "^8.10.0",
-    "eslint-plugin-wdio": "^7.4.2",
-    "wdio-chromedriver-service": "^7.2.8",
-    "wdio-wait-for": "^2.2.1"
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/register": "^7.22.15",
+    "@wdio/allure-reporter": "^8.16.12",
+    "@wdio/cli": "^8.16.12",
+    "@wdio/local-runner": "^8.16.12",
+    "@wdio/mocha-framework": "^8.16.12",
+    "@wdio/spec-reporter": "^8.16.12",
+    "wdio-video-reporter": "^4.0.4"
+  },
+  "dependencies": {
+    "allure-commandline": "^2.24.0",
+    "casual": "^1.6.2",
+    "fs": "^0.0.1-security"
   }
 }
