--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,12 +8,14 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 16
       - name: Install
-        run: npm install
+        run: npm ci
+        env:
+            DETECT_CHROMEDRIVER_VERSION: true
       - name: Test
         run: npm run test
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v1
         if: always()
         with:
           name: allure-report
